--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "^6.20.1",
     "react-tooltip": "^5.25.0",
     "sanity": "^3.21.0",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "tailwind-scrollbar": "^3.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
